--- a/app/src/main/res/layout/activity_picolo_settings.xml
+++ b/app/src/main/res/layout/activity_picolo_settings.xml
@@ -3,7 +3,7 @@
     android:id="@+id/main_layout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/picolo_gradient">
+    android:background="@color/white">
 
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
@@ -19,7 +19,7 @@
                 android:id="@+id/tv_title_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/MainTitle"
+                style="@style/MainTitlePicolo"
                 android:text="@string/picolo_title"/>
 
             <LinearLayout
@@ -34,7 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dumb_cat"
-                    style="@style/NormalWhiteText"
+                    style="@style/NormalGreyText"
                     android:layout_margin="@dimen/primary_margin"/>
 
                 <CheckBox
@@ -43,7 +43,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sexy_cat"
-                    style="@style/NormalWhiteText"
+                    style="@style/NormalGreyText"
                     android:layout_margin="@dimen/primary_margin"/>
 
                 <CheckBox
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hard_cat"
-                    style="@style/NormalWhiteText"
+                    style="@style/NormalGreyText"
                     android:layout_margin="@dimen/primary_margin"/>
 
             </LinearLayout>
@@ -73,6 +73,7 @@
                         android:layout_height="@dimen/little_button_size"
                         android:background="@drawable/ic_minus"
                         android:layout_gravity="center_horizontal|end"
+                        android:backgroundTint="@color/grey"
                         android:layout_margin="@dimen/primary_margin"
                         />
 
@@ -90,6 +91,7 @@
                         android:layout_height="@dimen/little_button_size"
                         android:background="@drawable/ic_plus"
                         android:layout_gravity="center_horizontal|start"
+                        android:backgroundTint="@color/grey"
                         android:layout_margin="@dimen/primary_margin"
                         />
 
@@ -101,7 +103,7 @@
                 android:id="@+id/nb_players_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TTBSettingsTheme"
+                style="@style/PicoloSettingsTheme"
                 android:gravity="center"
                 android:textSize="@dimen/normal_text_size"/>
 
@@ -123,13 +125,34 @@
 
     </LinearLayout>
 
-    <Button
-        android:layout_centerHorizontal="true"
+    <LinearLayout
         android:id="@+id/but_run_game"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_size"
-        android:text="@string/run_game"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/primary_margin"/>
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/rectangle_border"
+        android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:layout_width="@dimen/little_button_size"
+            android:layout_height="@dimen/little_button_size"
+            android:background="@drawable/ic_play"
+            android:backgroundTint="@color/light_blue"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/run_game"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/primary_margin"
+            android:layout_marginRight="@dimen/primary_margin"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
