--- a/app/src/main/res/layout/activity_red_or_black_settings.xml
+++ b/app/src/main/res/layout/activity_red_or_black_settings.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_layout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/rob_gradient">
+    android:background="@color/white">
 
         <LinearLayout
             android:orientation="vertical" android:layout_width="match_parent"
@@ -20,7 +20,7 @@
                     android:id="@+id/tv_title_settings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/MainTitle"
+                    style="@style/MainTitleRoB"
                     android:text="@string/red_or_black_title"/>
 
                 <LinearLayout
@@ -40,6 +40,7 @@
                             android:layout_height="@dimen/little_button_size"
                             android:background="@drawable/ic_minus"
                             android:layout_gravity="center_horizontal|end"
+                            android:backgroundTint="@color/grey"
                             android:layout_margin="@dimen/primary_margin"
                             />
 
@@ -57,6 +58,7 @@
                             android:layout_height="@dimen/little_button_size"
                             android:background="@drawable/ic_plus"
                             android:layout_gravity="center_horizontal|start"
+                            android:backgroundTint="@color/grey"
                             android:layout_margin="@dimen/primary_margin"
                             />
 
@@ -68,7 +70,7 @@
                     android:id="@+id/nb_players_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/TTBSettingsTheme"
+                    style="@style/RedOrBlackSettingsTheme"
                     android:gravity="center"
                     android:textSize="@dimen/normal_text_size"/>
 
@@ -78,8 +80,9 @@
                     android:layout_height="wrap_content"
                     android:text="@string/end_with_pyramid"
                     android:layout_gravity="center"
-                    style="@style/NormalWhiteText"
-                    android:checked="true"/>
+                    style="@style/NormalGreyText"
+                    android:checked="true"
+                    android:layout_marginBottom="30dp"/>
 
             </LinearLayout>
 
@@ -99,13 +102,33 @@
 
         </LinearLayout>
 
-    <Button
-        android:layout_centerHorizontal="true"
+    <LinearLayout
         android:id="@+id/but_run_game"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_size"
-        android:text="@string/run_game"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/primary_margin"/>
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/rectangle_border"
+        android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:layout_width="@dimen/little_button_size"
+            android:layout_height="@dimen/little_button_size"
+            android:background="@drawable/ic_play"
+            android:backgroundTint="@color/light_blue"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/run_game"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/primary_margin"
+            android:layout_marginRight="@dimen/primary_margin"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
