--- a/app/src/main/res/drawable/ttb_gradient.xml
+++ b/app/src/main/res/drawable/ttb_gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/primary_ttb_dark"
+        android:startColor="@color/black"
         android:endColor="@color/primary_ttb"
         android:angle="-90" />
 </shape>
