--- a/app/src/main/res/layout/activity_ttb_settings.xml
+++ b/app/src/main/res/layout/activity_ttb_settings.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_layout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ttb_gradient">
+    android:background="@color/white">
 
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
@@ -20,8 +20,8 @@
                 android:id="@+id/tv_title_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/MainTitle"
-                android:text="@string/ttb_title"/>
+                style="@style/MainTitleTTB"
+                android:text="@string/ttb_title" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,6 +39,7 @@
                         android:layout_width="@dimen/little_button_size"
                         android:layout_height="@dimen/little_button_size"
                         android:background="@drawable/ic_minus"
+                        android:backgroundTint="@color/grey"
                         android:layout_gravity="center_horizontal|end"
                         android:layout_margin="@dimen/primary_margin"
                         />
@@ -57,6 +58,7 @@
                         android:layout_height="@dimen/little_button_size"
                         android:background="@drawable/ic_plus"
                         android:layout_gravity="center_horizontal|start"
+                        android:backgroundTint="@color/grey"
                         android:layout_margin="@dimen/primary_margin"
                         />
 
@@ -70,7 +72,8 @@
                 android:layout_height="wrap_content"
                 style="@style/TTBSettingsTheme"
                 android:gravity="center"
-                android:textSize="@dimen/normal_text_size"/>
+                android:textSize="@dimen/normal_text_size"
+                android:layout_marginBottom="30dp"/>
 
         </LinearLayout>
 
@@ -91,42 +94,65 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/primary_ttb_dark">
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true">
 
-        <FrameLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:orientation="horizontal"
+            android:background="@drawable/rectangle_border"
+            android:layout_marginRight="@dimen/primary_margin">
 
-            <Button
-                android:layout_gravity="center"
-                android:id="@+id/settings"
+            <ImageView
                 android:layout_width="@dimen/little_button_size"
                 android:layout_height="@dimen/little_button_size"
-                android:layout_margin="@dimen/primary_margin"
-                android:background="@drawable/ic_settings" />
+                android:background="@drawable/ic_settings"
+                android:backgroundTint="@color/light_blue"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"/>
 
-        </FrameLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/primary_margin"
+                android:layout_marginRight="@dimen/primary_margin"
+                android:textStyle="bold"/>
 
-        <FrameLayout
-            android:layout_width="match_parent"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/but_run_game"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:orientation="horizontal"
+            android:background="@drawable/rectangle_border"
+            android:layout_marginLeft="@dimen/primary_margin">
 
-            <Button
-                android:layout_gravity="center"
-                android:id="@+id/but_run_game"
+            <ImageView
                 android:layout_width="@dimen/little_button_size"
                 android:layout_height="@dimen/little_button_size"
-                android:layout_margin="@dimen/primary_margin"
-                android:background="@drawable/ic_start" />
+                android:background="@drawable/ic_play"
+                android:backgroundTint="@color/light_blue"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"/>
 
-        </FrameLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/run_game"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/primary_margin"
+                android:layout_marginRight="@dimen/primary_margin"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
