--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <!--***** MAIN *****************************************************************************************-->
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -37,14 +37,35 @@
         <item name="android:textSize">@dimen/title_size</item>
         <item name="android:layout_margin">@dimen/primary_margin</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/white</item>
+
         <item name="android:fontFamily">cursive</item>
     </style>
+
+    <!--> TTB Title theme. -->
+    <style name="MainTitleTTB" parent="MainTitle">
+        <item name="android:textColor">@color/primary_ttb_dark</item>
+    </style>
+
+    <!--> Picolo Title theme. -->
+    <style name="MainTitlePicolo" parent="MainTitle">
+        <item name="android:textColor">@color/primary_picolo_dark</item>
+    </style>
+
+    <!--> RoB Title theme. -->
+    <style name="MainTitleRoB" parent="MainTitle">
+        <item name="android:textColor">@color/primary_red_or_black_dark</item>
+    </style>
+
 
     <!--> White text theme. -->
     <style name="NormalWhiteText">
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
+
+    <!--> White text theme. -->
+    <style name="NormalGreyText">
+        <item name="android:textColor">@color/grey</item>
         <item name="android:textSize">@dimen/normal_text_size</item>
     </style>
 
@@ -57,24 +78,42 @@
     <!--***** SETTINGS**************************************************************************************-->
 
     <!-- Picolo Settings theme. -->
-    <style name="PicoloSettingsTheme" parent="MainTheme">
+    <style name="PicoloSettingsTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary_picolo_dark</item>
         <item name="colorPrimaryDark">@color/primary_picolo_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_picolo_dark</item>
+        <item name="colorAccent">@color/primary_picolo_dark</item>
+        <item name="android:colorForeground">@color/primary_picolo_dark</item>
+        <item name="android:textColorPrimary">@color/grey</item>
+        <item name="android:editTextColor">@color/primary_picolo_dark</item>
+        <item name="android:textColorHint">@color/light_grey</item>
+        <item name="android:textColorSecondary">@color/grey</item>
     </style>
 
     <!-- Tic Tac Boom Settings theme. -->
-    <style name="TTBSettingsTheme" parent="MainTheme">
+    <style name="TTBSettingsTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary_ttb_dark</item>
         <item name="colorPrimaryDark">@color/primary_ttb_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_ttb_dark</item>
+        <item name="colorAccent">@color/primary_ttb_dark</item>
+        <item name="android:colorForeground">@color/primary_ttb_dark</item>
+        <item name="android:textColorPrimary">@color/grey</item>
+        <item name="android:editTextColor">@color/primary_ttb_dark</item>
+        <item name="android:textColorHint">@color/light_grey</item>
+        <item name="android:textColorSecondary">@color/grey</item>
     </style>
 
     <!-- Red Or Black Settings theme. -->
-    <style name="RedOrBlackSettingsTheme" parent="MainTheme">
+    <style name="RedOrBlackSettingsTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/primary_red_or_black_dark</item>
         <item name="colorPrimaryDark">@color/primary_red_or_black_dark</item>
         <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_red_or_black_dark</item>
+        <item name="colorAccent">@color/primary_red_or_black_dark</item>
+        <item name="android:colorForeground">@color/primary_red_or_black_dark</item>
+        <item name="android:textColorPrimary">@color/grey</item>
+        <item name="android:editTextColor">@color/primary_red_or_black_dark</item>
+        <item name="android:textColorHint">@color/light_grey</item>
+        <item name="android:textColorSecondary">@color/grey</item>
     </style>
 
     <!--****************************************************************************************************-->
@@ -188,7 +227,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center_vertical</item>
         <item name="textAllCaps">false</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/tiles_text_size</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginLeft">5dp</item>
