--- a/app/src/main/res/layout/activity_games_menu.xml
+++ b/app/src/main/res/layout/activity_games_menu.xml
@@ -6,37 +6,33 @@
     android:layout_height="match_parent"
     android:background="@color/menu_background">
 
+
+    <TextView
+        android:id="@+id/maintTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:textSize="40sp"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:fontFamily="serif-monospace"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/black"/>
+
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_below="@id/maintTitle"
+        android:layout_marginBottom="90dp">
 
         <LinearLayout
             android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/grey">
-
-                <TextView
-                    android:id="@+id/tv_title_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/MainTitle"
-                    android:text="@string/app_name"
-                    android:textColor="@color/black"/>
-
-            </FrameLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/black"
-                android:layout_marginBottom="30dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,8 +87,8 @@
                             android:id="@+id/picolo_rules_button"
                             android:layout_width="@dimen/rules_icon_size"
                             android:layout_height="@dimen/rules_icon_size"
-                            android:background="@drawable/ic_info"
-                            android:backgroundTint="@color/black"
+                            android:background="@android:drawable/ic_dialog_info"
+                            android:backgroundTint="@color/light_blue"
                             android:layout_marginRight="@dimen/primary_margin"
                             android:layout_marginTop="@dimen/primary_margin"
                             android:layout_marginBottom="@dimen/primary_margin"
@@ -150,8 +146,8 @@
                             android:id="@+id/ttb_rules_button"
                             android:layout_width="@dimen/rules_icon_size"
                             android:layout_height="@dimen/rules_icon_size"
-                            android:background="@drawable/ic_info"
-                            android:backgroundTint="@color/black"
+                            android:background="@android:drawable/ic_dialog_info"
+                            android:backgroundTint="@color/light_blue"
                             android:layout_marginRight="@dimen/primary_margin"
                             android:layout_marginTop="@dimen/primary_margin"
                             android:layout_marginBottom="@dimen/primary_margin"
@@ -219,18 +215,20 @@
                             android:id="@+id/red_or_black_rules_button"
                             android:layout_width="@dimen/rules_icon_size"
                             android:layout_height="@dimen/rules_icon_size"
-                            android:background="@drawable/ic_info"
+                            android:background="@android:drawable/ic_dialog_info"
                             android:layout_marginRight="@dimen/primary_margin"
                             android:layout_marginTop="@dimen/primary_margin"
                             android:layout_marginBottom="@dimen/primary_margin"
-                            android:backgroundTint="@color/black"
+                            android:backgroundTint="@color/light_blue"
                             />
 
                     </LinearLayout>
 
                 </RelativeLayout>
 
+                <!-- Comming soon tile. -->
                 <RelativeLayout
+                    android:id="@+id/comming_soon_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -291,5 +289,21 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <LinearLayout
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp">
+
+        <ImageButton
+            android:layout_width="@dimen/little_button_size"
+            android:layout_height="@dimen/little_button_size"
+            android:background="@android:drawable/ic_dialog_email"
+            android:backgroundTint="@color/light_blue" />
+
+    </LinearLayout>
 
 </RelativeLayout>
