--- a/app/src/main/res/drawable/circular.xml
+++ b/app/src/main/res/drawable/circular.xml
@@ -4,6 +4,6 @@
     android:shape="ring"
     android:thickness="2sp">
 
-        <solid android:color="@color/white" />
+        <solid android:color="@color/grey" />
 
 </shape>
