--- a/app/src/main/res/layout/activity_red_or_black_settings.xml
+++ b/app/src/main/res/layout/activity_red_or_black_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:foo="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,12 +17,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <com.example.jerome.a3grammes.Global.TextViewPlus
                     android:id="@+id/tv_title_settings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/MainTitleRoB"
-                    android:text="@string/red_or_black_title"/>
+                    android:text="@string/red_or_black_title"
+                    foo:customFont="Sketch_Block.ttf"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
