--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
         <item name="android:layout_margin">@dimen/primary_margin</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
-        <item name="android:fontFamily">cursive</item>
+
     </style>
 
     <!--> TTB Title theme. -->
@@ -160,17 +160,17 @@
     <!--***** TIC TAC BOOM *********************************************************************************-->
 
     <!--Tic Tac Boom Theme. -->
-    <style name="TTBTheme" parent="MainThemeGames">
-        <item name="colorPrimary">@color/primary_ttb</item>
-        <item name="colorPrimaryDark">@color/primary_ttb</item>
-        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/primary_ttb_dark</item>
-        <item name="android:colorBackground">@color/primary_ttb</item>
+    <style name="TTBTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/primary_ttb_dark</item>
+        <item name="colorPrimaryDark">@color/primary_ttb_dark</item>
+        <item name="android:colorButtonNormal" tools:targetApi="lollipop">@color/light_blue</item>
+        <item name="android:colorBackground">@color/white</item>
     </style>
 
     <!--> Division of question for TTB -->
     <style name="TTBDivisionQuestionText">
         <item name="android:textSize">40sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/primary_ttb_dark</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">@dimen/primary_margin</item>
@@ -179,16 +179,17 @@
     <!--> Level of question for TTB -->
     <style name="TTBLevelQuestionText">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:gravity">left</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_margin">@dimen/primary_margin</item>
     </style>
 
     <!--> Question for TTB -->
     <style name="TTBQuestionText">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/grey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:gravity">left</item>
         <item name="android:layout_margin">@dimen/primary_margin</item>
@@ -197,7 +198,7 @@
     <!--> time left for TTB -->
     <style name="TTBTimeLeft">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/grey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:layout_gravity">center</item>
     </style>
